network-policies/network-policy-client-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name:  network-policy-client-pod
spec:
  containers:
  - name: busybox
    image: radial/busyboxplus:curl
    command: ["/bin/sh", "-c", "while true; do sleep 3600; done"]
    resources:
      limits:
        memory: "32Mi"
        cpu: "125m"
