network-policies/secured-nginx-pod.yml
apiVersion: v1
kind: Pod
metadata:
 name: network-policy-secure-pod
 labels:
   app: secure-app
spec:
  containers:
  - name: nginx
    image: nginx
    resources:
      limits:
          memory: "32Mi"
          cpu: "125m"
    ports:
      - containerPort: 80
